infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: envvault-ingress
  namespace: envvault-production
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rate-limit: "100"
    nginx.ingress.kubernetes.io/rate-limit-window: "1m"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Frame-Options: DENY";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "Referrer-Policy: strict-origin-when-cross-origin";
      more_set_headers "Strict-Transport-Security: max-age=31536000; includeSubDomains";
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.envvault.io
      secretName: envvault-tls
  rules:
    - host: app.envvault.io
      http:
        paths:
          - path: /api/v1/auth/
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8001
          - path: /api/v1/secrets/
            pathType: Prefix
            backend:
              service:
                name: secrets-service
                port:
                  number: 8002
          - path: /api/v1/audit/
            pathType: Prefix
            backend:
              service:
                name: audit-service
                port:
                  number: 8003
          - path: /api/v1/billing/
            pathType: Prefix
            backend:
              service:
                name: billing-service
                port:
                  number: 8004
          - path: /api/v1/notifications/
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 8005
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
